<resources>
    <string name="app_name">PurchasingApps</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pr">Purchase Requisition</string>
    <string name="title_po">Purchase Order</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Today fragment</string>
    <string name="tab_text_1">Today Fragment</string>
    <string name="tab_text_2">One Week Fragment</string>
    <string name="month_ago">3 Bulan</string>
    <string name="last_month">Bulan Kemarin</string>
    <string name="this_month">Bulan Ini</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="action_logout">Sign Out</string>

    <string-array name="data_name">
        <item>Nadia</item>
        <item>Jea</item>
        <item>Indri</item>
        <item>Ayling</item>
        <item>Tunai</item>
    </string-array>

    <integer-array name="this_month">
        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>3</item>
        <item>2</item>
    </integer-array>

    <integer-array name="last_month">
        <item>5</item>
        <item>4</item>
        <item>7</item>
        <item>1</item>
        <item>2</item>
    </integer-array>

    <integer-array name="month_ago">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>3</item>
        <item>0</item>
    </integer-array>
</resources>