<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:padding="8dp"
        android:layout_marginBottom="35dp">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/img_item_name"
            android:textStyle="bold"
            tools:text="Name" />

        <ImageView
            android:id="@+id/img_item_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            android:src="@drawable/ic_baseline_person"
            android:textStyle="bold"
            tools:text="Name" />

        <ImageView
            android:id="@+id/img_this_month"
            android:layout_width="50dp"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            android:src="@drawable/ic_baseline_format_list_bulleted"
            android:textStyle="bold"
            android:layout_below="@id/img_item_name"  />

        <TextView
            android:id="@+id/tv_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_marginTop="6dp"
            android:text="@string/this_month"
            android:layout_marginStart="60dp"
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/img_this_month"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/value_this_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="50sp"
            android:layout_below="@id/tv_this_month"
            android:layout_toEndOf="@id/img_this_month"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="15"/>

        <TextView
            android:id="@+id/tv_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            android:layout_marginStart="120dp"
            android:text="@string/last_month"
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/tv_this_month"
            android:gravity="center"/>
        <TextView
            android:id="@+id/value_last_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="50sp"
            android:layout_below="@id/tv_last_month"
            android:layout_toEndOf="@id/tv_this_month"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="10"/>

        <TextView
            android:id="@+id/tv_month_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_marginStart="120dp"
            android:layout_marginTop="6dp"
            android:text="@string/month_ago"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_below="@id/tv_item_name"
            android:layout_toEndOf="@id/tv_last_month"
            card_view:drawableStartCompat="@drawable/greater" />
        <TextView
            android:id="@+id/value_month_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="50sp"
            android:layout_below="@id/tv_month_ago"
            android:layout_toEndOf="@id/tv_last_month"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="1"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>